EWB-6 Update setup
Setup a vue project

--- a/doc/1.setup.md
+++ b/doc/1.setup.md
@@ -6,3 +6,48 @@
 
 若要支持网页调试，需安装Debugger for Chrome
 
+## 安装
+
+```sh
+npm install -g @vue/cli
+# OR
+yarn global add @vue/cli
+```
+
+## 使用
+
+### 创建项目
+
+```sh
+vue create project-name
+```
+
+### 使用图形化界面
+
+```sh
+vue ui
+```
+
+### 插件和 Preset
+
+```sh
+vue add eslint
+vue add router
+```
+
+### CLI 服务
+
+```json
+{
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  }
+}
+```
+
+```sh
+npm run serve
+# OR
+yarn serve
+```
