EWB-7 Template syntax
A template syntax example

--- a/doc/2.start.md
+++ b/doc/2.start.md
@@ -66,3 +66,20 @@ createApp(Counter).mount('#app')
   }
 </script>
 ```
+
+## Vue核心语法
+
+### 模版语法
+
+Vue使用基于HTML模版语法，允许开发者声明式将DOM绑定至底层Vue实例的数据。所有Vue.js的模板都是合法的HTML，所有能被遵循规范的浏览器和HTML解析器解析。
+
+#### 文本插值
+
+数据绑定最常见的形式使用"Mustache"语法(双大括号)的文本插值
+
+```html
+<div id="counter">Counter: {{ counter }}</div>
+<div id="counter" v-once>这个将不会改变: Counter: {{ counter }}</div>
+```
+
+#### Attribute
