EWB-7 Update VUE Start
1. Conditional rendering
2. List rendering
3. Event handling
4. Form input bindings

--- a/doc/2.start.md
+++ b/doc/2.start.md
@@ -83,3 +83,37 @@ Vue使用基于HTML模版语法，允许开发者声明式将DOM绑定至底层V
 ```
 
 #### Attribute
+
+```html
+<div v-bind:id="dynamicId"></div>
+<button v-bind:disabled="isButtonDisabled">按钮</button>
+```
+
+#### 条件渲染
+
+```html
+<p v-if="true"></p>
+```
+
+#### 列表渲染
+
+```html
+<ul id="array">
+  <li v-for="item in items">
+    {{ item.message }}
+  </li>
+</ul>
+```
+
+#### 事件处理
+
+```html
+<button @click="add">Add</button>
+<button v-on:click="add">Add</button>
+```
+
+#### 表单输入绑定
+
+```html
+<input v-model="message" placeholder="edit me" />
+```
