EWB-8 Update VUE Start
1. Computed and watcher.
2. Class and styles.

--- a/doc/2.start.md
+++ b/doc/2.start.md
@@ -117,3 +117,25 @@ Vue使用基于HTML模版语法，允许开发者声明式将DOM绑定至底层V
 ```html
 <input v-model="message" placeholder="edit me" />
 ```
+
+#### 计算属性和侦听器
+
+```js
+computed: {
+  isEmpty() {
+    return this.items.length > 0 ? false : true
+  }
+},
+watch: {
+  item(newItem, oldItem) {
+    console.log(newItem);
+    console.log(oldItem);
+  },
+}
+```
+
+#### Class 与 Style 绑定
+
+```html
+<div :class="classObject"></div>
+```
