--- a/doc/2.start.md
+++ b/doc/2.start.md
@@ -139,3 +139,23 @@ watch: {
 ```html
 <div :class="classObject"></div>
 ```
+
+#### 生命周期
+
+```js
+{
+  // 1.初始化
+  beforeCreate(){}  // 执行时组件实例还未创建，通常用于插件开发中执行一些初始化任务
+  created(){}       // 组件初始化完毕，各种数据可以使用，常用于异步数据获取
+  beforeMount(){}   // 未执行渲染、更新，dom未创建
+  mounted(){}       // 初始化结束，dom已创建，可用于获取访问数据和dom元素
+
+  // 2.更新
+  beforeUpdate(){}  // 更新前，可用于获取更新前各种状态
+  updated(){}       // 更新后，所有状态已是最新
+
+  // 3.销毁
+  beforeUnmount(){} // 卸载前，可用于一些定时器或订阅的取消
+  unmounted(){}     // 组件已卸载，作用同上
+}
+```
