--- a/doc/4.animation.md
+++ b/doc/4.animation.md
@@ -83,6 +83,20 @@ opacity修改不用css做
 ></transition>
 ```
 
+opacity修改不用css做
+
+```css
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+```
+
+```css
+```
+
+
+
 ## 列表过渡
 
 利用transition-group可以对v-for渲染的每个元素应用过度
