EWB-12 Vue Animation

--- a/doc/4.animation.md
+++ b/doc/4.animation.md
@@ -50,13 +50,6 @@ Vue.createApp(Demo).mount('#demo')
 ## 使用CSS动画库
 
 通过自定义过度类名可以有效结合Animate.css这类动画库制作更精美的动画效果。
-引入animate.css
-transition设置
-JavaScript 钩子
-
-范例：用JS实现消息动画
-opacity修改不用css做
-加上js钩子
 
 ```html
 <!-- 不用放到子组件中，会覆盖掉父组件中的class -->
@@ -72,15 +65,15 @@ opacity修改不用css做
 
 ```html
 <transition
-  v-on:before-enter="beforeEnter" // 动画开始前，设置初始状态
-  v-on:enter="enter" // 执行动画
-  v-on:after-enter="afterEnter" // 动画结束，清理工作
+  v-on:before-enter="beforeEnter"       // 动画开始前，设置初始状态
+  v-on:enter="enter"                    // 执行动画
+  v-on:after-enter="afterEnter"         // 动画结束，清理工作
   v-on:enter-cancelled="enterCancelled" // 取消动画
   v-on:before-leave="beforeLeave"
   v-on:leave="leave"
   v-on:after-leave="afterLeave"
-  v-on:leave-cancelled="leaveCancelled"
-></transition>
+  v-on:leave-cancelled="leaveCancelled">
+</transition>
 ```
 
 opacity修改不用css做
